@@ -17,6 +17,7 @@ TRUNK
 -   `daemonize` option deprecated
 -   SASL DIGEST-MD5 removed
 -   Switch to libunbound for DNS queries
+-   mod_external_services (XEP-0215)
 
 0.11.0
 ======
